--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12">
                     <div class="teacher-card">
-                            <img class= "teacher-img" src="https://drive.google.com/file/d/1Qj7Gwbi1I09h9J7g-w0HaLtLzO9sd5qs/view?usp=sharing" alt="">
+                            <img class= "teacher-img" src="./Assets/Profile Pic.png" alt="">
                         <h4>G. Lohith Krishna</h4>
                         <p>Lohith is a certified developer in both C and Python with a passion for teaching and simplifying programming concepts. He specializes in making technical topics approachable through practical examples and hands-on learning. His goal is to help students build a strong foundation, gain confidence, and apply coding skills effectively in real-world scenarios.</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="teacher-card">
-                            <img class= "teacher-img" src="https://drive.google.com/file/d/1yfpPzLe-YDBYN3VzWflujkEwhEgQi95j/view?usp=sharing" alt="">
+                            <img class= "teacher-img" src="./Assets/Profile Pic.png" alt="">
                         <h4>G. Jaideep</h4>
                         <p>Jaideep is a certified C and Python developer known for his structured approach and clear teaching style. He focuses on guiding students through logical problem-solving and practical coding techniques. With a strong commitment to student success, Jaideep helps learners grasp core concepts and develop the confidence to tackle real programming challenges.
                     </div>
