--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                 <option value="">Select a course</option>
                                 <option value="Python Programming">Python Programming</option>
                                 <option value="C Programming">C Programming</option>
-                                <option value="C + Python Combo">Full Stack</option>
+                                <option value="Full Stack">Full Stack Development</option>
                             </select>
                         </div>
                         <div class="mb-3">
