--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>SHASHNA Academy</title>
-    <link rel="shortcut icon" href="Assets/Academy Logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/Assets/Academy Logo.ico" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -122,14 +122,14 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12">
                     <div class="teacher-card">
-                            <img class= "teacher-img" src="./Assets/Profile Pic.png" alt="">
+                            <img class= "teacher-img" src="/Assets/Profile Pic.png" alt="">
                         <h4>G. Lohith Krishna</h4>
                         <p>Lohith is a certified developer in both C and Python with a passion for teaching and simplifying programming concepts. He specializes in making technical topics approachable through practical examples and hands-on learning. His goal is to help students build a strong foundation, gain confidence, and apply coding skills effectively in real-world scenarios.</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="teacher-card">
-                            <img class= "teacher-img" src="./Assets/Profile Pic.png" alt="">
+                            <img class= "teacher-img" src="/Assets/Profile Pic.png" alt="">
                         <h4>G. Jaideep</h4>
                         <p>Jaideep is a certified C and Python developer known for his structured approach and clear teaching style. He focuses on guiding students through logical problem-solving and practical coding techniques. With a strong commitment to student success, Jaideep helps learners grasp core concepts and develop the confidence to tackle real programming challenges.
                     </div>
