--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
             <div class="row">
                 <div class="col-lg-6 col-md-12">
                     <div class="teacher-card">
-                        <img class="teacher-img" src="./Assets/Profile Pic.png" alt="Mentor Lohith Krishna">
+                        <img class="teacher-img" src="public/Assets/Profile Pic.png" alt="Mentor Lohith Krishna">
                         <h4>G. Lohith Krishna</h4>
                         <p>Lohith is a certified developer in both C and Python with a passion for teaching and simplifying programming concepts. He specializes in making technical topics approachable through practical examples and hands-on learning.</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <div class="teacher-card">
-                        <img class="teacher-img" src="/Assets/Jaideep.jpg" alt="Mentor Jaideep">
+                        <img class="teacher-img" src="public/Assets/Jaideep.jpg" alt="Mentor Jaideep">
                         <h4>G. Jaideep</h4>
                         <p>Jaideep is a certified C and Python developer known for his structured approach and clear teaching style. He focuses on guiding students through logical problem-solving and practical coding techniques.</p>
                     </div>
